kubernetes/overlays/prod/patches/fastapi-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/sunba23/sunbadev-nginx:prod
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
