kubernetes/overlays/prod/patches/nginx-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: nginx
          image: ghcr.io/sunba23/sunbadev-nginx:prod
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
