kubernetes/overlays/prod/patches/traefik-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-sunbadev
spec:
  template:
    spec:
      containers:
        - name: traefik
          args:
            - --api.dashboard=true
            - --providers.kubernetes.namespaces=prod
            - --providers.kubernetes.ingress=true
            - --entrypoints.web.address=:8001
            - --entrypoints.websecure.address=:8443
            - --providers.kubernetes.ingressClassNames=traefik-sunbadev-prod
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-sunbadev
spec:
  ports:
    - name: web
      port: 8001
    - name: websecure
      port: 8443
